# Licht-Engine

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE  Libraries.cmake  readme.md
.github/workflows/: cmake-windows.yml
.zed/: tasks.json
cmake/: libraries.cmake
src/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  ServiceLocator.h  main.cpp
src/engine/core/: CMakeLists.txt
src/engine/core/include/: Core.h  DisableCopyMove.h  Engine.h  ModuleHandeler.h  ModuleInterface.h  ServiceLocator.h
src/engine/core/include/Events/: Event.h  EventListener.h
src/engine/core/src/: CoreInternal.h  Engine.cpp  core.cpp
src/engine/net/: CMakeLists.txt
src/engine/net/include/: Address.h  Client.h  net.h  server.h
src/engine/net/src/: Address.cpp  Client.cpp  net.cpp  server.cpp
src/engine/renderer/: CMakeLists.txt
src/engine/renderer/include/: Renderer.h
src/engine/renderer/src/: renderer.cpp
src/engine/scripting/: CMakeLists.txt
src/engine/scripting/include/: AngelScriptRegister.h  AngelScriptStubWriter.h  RegisterAllAngelScript.h  ScriptingEngine.h
src/engine/scripting/src/: AngelScriptStubWriter.cpp  ScriptingEngine.cpp
src/engine/system/: ServiceLocator.h
src/engine/system/scripting/: ScriptingEngine.cpp  ScriptingEngine.h
src/game/: CMakeLists.txt  as.predefined  main.as
